--- a/.github/workflows/ru.yml
+++ b/.github/workflows/ru.yml
@@ -10,51 +10,13 @@ on:
 
 env:
   VCPKG_ROOT: "C:\\vcpkg"
-  # 禁用所有缓存机制
-  VCPKG_FEATURE_FLAGS: "-binarycaching,-manifests,-versions"  
-  VCPKG_BINARY_SOURCES: "clear"
-
-jobs:
-  build:name: "RustDesk Windows CI (Stable)"
-
-on:
-  workflow_dispatch:
-    inputs:
-      clean_install:
-        description: "Perform full clean install"
-        type: boolean
-        default: false
-
-env:
-  VCPKG_ROOT: "C:\\vcpkg"
-  VCPKG_FEATURE_FLAGS: "-binarycaching,-manifests"  # 禁用所有缓存
+  VCPKG_FEATURE_FLAGS: "-binarycaching,-manifests"
   VCPKG_BINARY_SOURCES: "clear"
 
 jobs:
   build:
     runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-
-    - name: Clean Install
-      if: ${{ inputs.clean_install }}
-      run: rm -rf "${{ env.VCPKG_ROOT }}"
-
-    - name: Install Dependencies
-      run: |
-        vcpkg install \
-          --triplet x64-windows \
-          --clean-after-build \
-          --recurse \
-          --x-asset-sources=clear \
-          libvpx libyuv openssl
-
-    - name: Build
-      run: cargo build --release --target x86_64-pc-windows-msvc
-    runs-on: windows-latest
-    timeout-minutes: 75  # 延长超时时间
+    timeout-minutes: 75
 
     steps:
     - name: "1️⃣ Nuclear Clean"
@@ -68,7 +30,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
-        fetch-depth: 0  # 完整克隆历史
+        fetch-depth: 0
 
     - name: "3️⃣ Safe vcpkg Setup"
       shell: powershell
@@ -76,8 +38,7 @@ jobs:
         if (-not (Test-Path "$env:VCPKG_ROOT\vcpkg.exe")) {
           git clone https://github.com/microsoft/vcpkg "$env:VCPKG_ROOT"
           cd "$env:VCPKG_ROOT"
-          # 锁定已知稳定版本
-          git checkout 2024.04.17  
+          git checkout 2024.04.17
           .\bootstrap-vcpkg.bat -disableMetrics
         }
 
